@@ -1,120 +1,144 @@
 package Chatr.Client;
 
 import Chatr.Helper.CONFIG;
+import Chatr.Helper.Enums.Crud;
+import Chatr.Helper.Enums.RequestType;
 import Chatr.Helper.JSONTransformer;
 import Chatr.Server.Transmission;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.java_websocket.client.WebSocketClient;
+import org.java_websocket.drafts.Draft_17;
+import org.java_websocket.handshake.ServerHandshake;
 
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStreamReader;
-import java.io.PrintWriter;
-import java.net.ConnectException;
-import java.net.MalformedURLException;
-import java.net.Socket;
-import java.net.URL;
-import java.util.*;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.util.ArrayList;
+import java.util.Iterator;
+import java.util.List;
 
 /**
  * Connects to the server and sends / receives Requests
  */
 public class Client {
-	private URL url;
-	private List<Transmission> outBuffer = Collections.synchronizedList(new LinkedList<>());
-	private List<Transmission> inBuffer = Collections.synchronizedList(new LinkedList<>());
-	private Logger log = LogManager.getLogger(Client.class);
+	private WebSocketClient socketClient;
+	private List<Listener> listeners = new ArrayList<>();
+	private static Logger log = LogManager.getLogger(Client.class);
 
-	protected Client() {
+	public Client() {
 		try {
-			this.url = new URL(CONFIG.SERVER_ADDRESS);
-		} catch (MalformedURLException e) {
-			log.error("malformed URL", e);
+			socketClient = new WebSocketClient(new URI(CONFIG.SERVER_ADDRESS), new Draft_17()) {
+				@Override
+				public void onOpen(ServerHandshake serverHandshake) {
+					log.info("Client open connection");
+				}
+
+				@Override
+				public void onMessage(String s) {
+					final Transmission response = JSONTransformer.fromJSON(s, Transmission.class);
+					log.debug("Message received: " + response);
+
+					Iterator<Listener> it = listeners.iterator();
+					while (it.hasNext()) {
+						Listener listener = it.next();
+						if (listener.isListenerFor(response.getRequestType(), response.getCRUD())) {
+							listener.notify(response);
+							it.remove();
+							return;
+						}
+					}
+					Handler handler = HandlerFactory.getInstance(response.getRequestType());
+					handler.process(response);
+				}
+
+				@Override
+				public void onClose(int i, String s, boolean b) {
+					log.info("Connection to server closed");
+				}
+
+				@Override
+				public void onError(Exception e) {
+					log.error("Problem with client: ", e);
+				}
+
+			};
+			socketClient.connect();
+		} catch (URISyntaxException e) {
+			log.error("Invalid URI: " + CONFIG.SERVER_ADDRESS);
 		}
 	}
 
 	/**
-	 * POST request to the Server return response
+	 * sends the Transmission to the server asynchronously i.e. non blocking
 	 *
-	 * @return separated lines of the Server's response
+	 * @param request Transmission to send
 	 */
-	protected Transmission get(Transmission request) {
-		outBuffer.add(request);
-		connect();
-		return filterResponse(request);
+	public void sendAsync(Transmission request) {
+		socketClient.send(JSONTransformer.toJSON(request));
 	}
-
-	protected List<Transmission> getMultiple(Transmission request) {
-		outBuffer.add(request);
-		connect();
-		return filterResponses(request);
-	}
-
-	protected List<Transmission> getNotifications() {
-		return inBuffer;
-	}
-
-	//
 
 	/**
-	 * Protocol:
-	 * 1. Send request
-	 * 2. read all lines of the response from the server
-	 * 3. close connection
+	 * sends the Transmission to the server synchronously i.e. blocking
+	 *
+	 * @param request Transmission to send
+	 * @return response from the server
 	 */
-	private void connect() {
-		try (
-				Socket socket = new Socket(url.getHost(), url.getPort());
-				PrintWriter out = new PrintWriter(socket.getOutputStream(), true);
-				BufferedReader in = new BufferedReader(new InputStreamReader(socket.getInputStream()))
-		) {
-			// Sending
-			for (Transmission data : outBuffer) {
-				String json = JSONTransformer.toJSON(data);
-				out.println(json);
-			}
-			outBuffer.clear();
-			socket.shutdownOutput();
-
-			// Receiving
-			String json;
-			while ((json = in.readLine()) != null) {
-				Transmission data = JSONTransformer.fromJSON(json, Transmission.class);
-				inBuffer.add(data);
-			}
-			socket.shutdownInput();
-		} catch (ConnectException e) {
-			log.error(String.format("unable to connect to %s", url), e);
-		} catch (IOException e) {
-			log.error(e);
+	public Transmission send(Transmission request) {
+		Listener listener = new Listener(request, Thread.currentThread());
+		listeners.add(listener);
+		sendAsync(request);
+		try {
+			Thread.sleep(CONFIG.TIMEOUT);
+		} catch (InterruptedException e) {
+			return listener.get();
 		}
+		log.error("request timeout... retrying");
+		return send(request);
 	}
 
-	private Transmission filterResponse(Transmission request) {
-		Iterator<Transmission> it = inBuffer.iterator();
-		Transmission tran = null;
-		while (it.hasNext()) {
-			tran = it.next();
-			if (tran.getRequestType() == request.getRequestType() &&
-					tran.getCRUD() == request.getCRUD()) {
-				it.remove();
-				break;
-			}
-		}
-		return tran;
-	}
+	/**
+	 * Listens for a response of the given type. Notifies the given Thread
+	 */
+	private class Listener {
+		private Thread thread;
+		private Crud crud;
+		private RequestType type;
+		private Transmission response;
 
-	private List<Transmission> filterResponses(Transmission request) {
-		List<Transmission> filter = new ArrayList<>();
-		Iterator<Transmission> it = inBuffer.iterator();
-		while (it.hasNext()) {
-			Transmission tran = it.next();
-			if (tran.getRequestType() == request.getRequestType() &&
-					tran.getCRUD() == request.getCRUD()) {
-				filter.add(tran);
-				it.remove();
-			}
+		Listener(Transmission request, Thread currentThread) {
+			this.thread = currentThread;
+			this.crud = request.getCRUD();
+			this.type = request.getRequestType();
 		}
-		return filter;
+
+		/**
+		 * check if this listener is for the given request Type
+		 *
+		 * @param type Request type of the incoming response
+		 * @param crud CRUD Type of the incoming response
+		 * @return if the Listener is waiting for this response
+		 */
+		public boolean isListenerFor(RequestType type, Crud crud) {
+			return this.type.equals(type) && this.crud.equals(crud);
+		}
+
+		/**
+		 * notifies the Thread of this listener that a response from the Server is available
+		 *
+		 * @param response response from the server
+		 */
+		public void notify(Transmission response) {
+			this.response = response;
+			thread.interrupt();
+		}
+
+		/**
+		 * gets the response from the server
+		 *
+		 * @return Response from the server
+		 */
+		Transmission get() {
+			return response;
+		}
 	}
 }
